--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -96,3 +96,14 @@ html {
     border: 4px solid white;
     box-shadow: var(--box-shadow);
 }
+
+.cart-count-badge {
+    padding: 0.25em 0.5em;
+    font-size: 0.7rem !important;
+    line-height: 1;
+    min-width: 18px;
+    height: 18px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
